# yacrs

./: .gitignore  README.md  pyproject.toml  setup.py  tutorial.md
.github/workflows/: python-app.yml
test/: conftest.py  test.py  test_cli.py  test_configurable.py  test_node.py
yacrs/: __init__.py  config.py
